--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tempo Juntos</title>
+    <title>Nosso tempo</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -23,7 +23,7 @@
 </head>
 <body>
     <h1>Tempo Juntos</h1>
-    <p>Vocês estão juntos há:</p>
+    <p>Nós estamos juntos há:</p>
     <div id="counter">Carregando...</div>
 
     <script>
